Added support for storing embedded workflow and task definitions - Workflow executions can now store embedded workflow definitions - Workflow tasks can now store embedded task definitions - As workflow tasks may contain embedded definitions, this let execution Tasks access to it on those cases
During the addition of the work, some code styles were updated:
- Got rid of implementation classes on attribute declarations.
- Refactored certain variables across the code on behalf of improving readability