@@ -378,19 +378,19 @@ public class Workflow extends Auditable {
         if (refName == null) {
             throw new RuntimeException("refName passed is null.  Check the workflow execution.  For dynamic tasks, make sure referenceTaskName is set to a not null value");
         }
-        LinkedList<Task> found = new LinkedList<Task>();
-        for (Task t : tasks) {
-            if (t.getReferenceTaskName() == null) {
-                throw new RuntimeException("Task " + t.getTaskDefName() + ", seq=" + t.getSeq() + " does not have reference name specified.");
+        List<Task> found = new LinkedList<>();
+        for (Task task : tasks) {
+            if (task.getReferenceTaskName() == null) {
+                throw new RuntimeException("Task " + task.getTaskDefName() + ", seq=" + task.getSeq() + " does not have reference name specified.");
             }
-            if (t.getReferenceTaskName().equals(refName)) {
-                found.add(t);
+            if (task.getReferenceTaskName().equals(refName)) {
+                found.add(task);
             }
         }
         if (found.isEmpty()) {
             return null;
         }
-        return found.getLast();
+        return found.get(found.size() - 1);
     }
 
     @Override
